--- a/react-app/package.json
+++ b/react-app/package.json
@@ -8,7 +8,8 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "history": "^5.0.0",
-    "react": "^17.0.0",
+    "react": "^17.0.1",
+    "react-data-grid": "^7.0.0-canary.26",
     "react-dom": "^17.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.4"
