--- a/react-app/package.json
+++ b/react-app/package.json
@@ -24,7 +24,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "flask": "cd api && cross-env FLASK_APP=api flask run --no-debugger"
+    "flask": "cd api && cross-env FLASK_APP=api flask run --no-debugger",
+    "start-all": "npm-run-all --parallel start flask"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -41,5 +42,8 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000"
+  "proxy": "http://localhost:5000",
+  "devDependencies": {
+    "npm-run-all": "^4.1.5"
+  }
 }
