--- a/react-app/package.json
+++ b/react-app/package.json
@@ -12,6 +12,7 @@
     "@trendmicro/react-sidenav": "^0.5.0",
     "cross-env": "^7.0.2",
     "history": "^5.0.0",
+    "js-cookie": "^2.2.1",
     "react": "^16.14.0",
     "react-bootstrap-validation": "^0.1.11",
     "react-data-grid": "^7.0.0-canary.26",
