--- a/react-app/package.json
+++ b/react-app/package.json
@@ -25,7 +25,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "flask": "cd api && cross-env FLASK_APP=api flask run --no-debugger",
+    "flask": "cd api && cross-env FLASK_APP=api flask run --port=8000 --no-debugger",
     "start-all": "npm-run-all --parallel start flask"
   },
   "eslintConfig": {
@@ -43,7 +43,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://localhost:5000",
+  "proxy": "http://localhost:8000",
   "devDependencies": {
     "npm-run-all": "^4.1.5"
   }
